fixed z-index on quick-view

--- a/css/style.css
+++ b/css/style.css
@@ -999,11 +999,10 @@ a:hover, a:focus, a:active {
 
 .catalog-item {
   position: relative;
-  z-index: 1;
 
   width: 22.2%;
-  flex-grow: 1;
   margin-right: 2.2%;
+  flex-grow: 1;
 
   text-align: center;
 }
@@ -1016,7 +1015,7 @@ a:hover, a:focus, a:active {
   display: none;
   box-sizing: border-box;
   position: absolute;
-  z-index: -1;
+  z-index: 1000;
   width: 110%;
   height: 128%;
   top: -2%;
